<resources>
    <string name="app_name">KIS</string>

    <!--====================== Login View ======================-->
    <string name="DE_TEXT_Login_Input_Personal_Number">Personal Nummer</string>
    <string name="DE_TEXT_Login_Input_Password">Password</string>
    <string name="DE_BUTTON_Login">Login</string>
    <string name="DE_BUTTON_Logout">Logout</string>


    <!--====================== Top Bar Fragment ======================-->
    <string name="DE_TEXT_App_Name">KIS</string>

    <!--====================== Details View ======================-->
    <string name="DE_TEXT_PersonalDataKrankenkasse">KrankankassenNr</string>
    <string name="DE_TEXT_PersonalDataName">Name</string>
    <string name="DE_TEXT_PersonalData">Vorname, Nachname</string>
    <string name="DE_TEXT_Personal_Data_2">Vorname</string>
    <string name="DE_TEXT_PersonalDataAge">Alter</string>
    <string name="DE_TEXT_Personal_Data_4">Adresse</string>
    <string name="DE_TEXT_Personal_Data_5">Station</string>
    <string name="DE_TEXT_Personal_Data_6">Zimmer</string>
    <string name="DE_TEXT_PersonalDataBett">Bett</string>
    <string name="DE_TEXT_Personal_Data_8">KrankenkassenNr.</string>
    <string name="DE_TEXT_Personal_Data_9">Notfall-Kontakt Name</string>
    <string name="DE_TEXT_Personal_Data_10">Notfall-Kontakt Nummer</string>
    <string name="DE_TEXT_PersonalDiagnose">Diagnose</string>
    <string name="DE_TEXT_Zustand">Zustand</string>
    <string name="DE_TEXT_Notiz">Notitz</string>
    <string name="DE_TEXT_Datum">Datum</string>
    <string name="DE_TEXT_RequestedDocuments">Dokumente</string>
    <string name="DE_TEXT_LeukoTitel">Leukozyten/nl</string>
    <string name="DE_TEXT_LeukoValue">Wert</string>
    <string name="DE_TEXT_LeukoLymphoRatioTitel">Lymphozyten (% der Leuko)</string>
    <string name="DE_TEXT_LeukoLyphoRatioValue">Wert</string>
    <string name="DE_TEXT_LeukoLymphoAbsolutTitel">Lymphozyten absolut in 100/nl</string>
    <string name="DE_TEXT_LeukoLymphoAbsolutValue">Wert</string>
    <string name="DE_TEXT_ArztViteTitel1">Visite</string>
    <string name="DE_TEXT_ArztViteTitel2">Checkliste</string>
    <string name="DE_TEXT_ArztViteCounter">Status</string> <!-- Anzeige wie viele Patienten noch offen sind fuür den Tag-->
    <string name="DE_TEXT_AdministrationTitel">Administration</string>


    <!-- Button -->

    <!--====================== Details Pop-Up ======================-->
    <string name="DE_TEXT_State">Zustand</string>
    <string name="DE_TEXT_Drug_Name">Schmerzmittel</string>
    <string name="DE_TEXT_Drug_Dose">Dosierung</string>
    <string name="DE_TEXT_Drug_Pain_Scala">Schmerzensgrad</string>
    <string name="DE_TEXT_Notes">Notizen</string>

    <!--====================== Patient Card ======================-->
    <string name="DE_TEXT_No_Entry">Kein Eintrag</string>

    <!-- Details IMG BUTTON -->
    <string name="DE_BUTTON_Show_Details">Details</string>

    <!--====================== Home View ======================-->
    <string name="DE_TEXT_CheckList_Visite">Checkliste Visite</string>
    <string name="DE_TEXT_Patient_Entry">Patientenaufnahme</string>
    <string name="DE_TEXT_Search_Bar">Suche</string>

    <!--====================== Burger Menu View ======================-->
    <string name="DE_BUTTON_Patient_Database">Patienten Datenbank</string>
    <string name="DE_BUTTON_Medicine_Database">Medizin Datenbank</string>

    <!--====================== DE Strings Buttons ======================-->
    <string name="DE_BUTTON_Add_Patient">Patient Hinzufuegen</string>
    <string name="DE_BUTTON_Delete_Patient">Patient Entlassen</string>

    <!-- Names for Doctor DataBase -->
    <string-array name="DB_CREATE_Doctor_Data">
        <item>ID</item>
        <item>PreName</item>
        <item>LastName</item>
        <item>Specialization</item>
        <item>StationNumber</item>
        <item>StationName</item>
    </string-array>

    <!--- Names for Patient DataBase -->
    <string-array name="DB_CREATE_Patient_Data">
        <item>ID</item>
        <item>PreName</item>
        <item>LastName</item>
        <item>BirthDate</item>
        <item>Address</item>
        <item>HealthInsuranceNumber</item>
        <item>StationNumber</item>
        <item>BedNumber</item>
        <item>Injury</item>
        <item>Drug</item>
        <item>Dose</item>
        <item>PainScala</item>
    </string-array>


    <!-- TestDataArrays -->

    <string-array name="patientNames">
        <item>Patient1</item>
        <item>Patient2</item>
        <item>Patient3</item>
        <item>Patient4</item>
        <item>Patient4</item>
        <item>Patient1</item>
        <item>Patient2</item>
        <item>Patient3</item>
        <item>Patient4</item>
        <item>Patient4</item>
    </string-array>
    <string-array name="patientBirthDates">
        <item>12.12.1988</item>
        <item>22.01.1948</item>
        <item>22.01.1948</item>
        <item>22.01.1948</item>
        <item>22.01.1948</item>
        <item>12.12.1988</item>
        <item>22.01.1948</item>
        <item>22.01.1948</item>
        <item>22.01.1948</item>
        <item>22.01.1948</item>
    </string-array>
    <string-array name="patientDiagnose">
        <item>k.A</item>
        <item>rechtes Bein</item>
        <item>Pimmel</item>
        <item>Kopf</item>
        <item>Nase</item>
        <item>k.A</item>
        <item>rechtes Bein</item>
        <item>Pimmel</item>
        <item>Kopf</item>
        <item>Nase</item>
    </string-array>

    <string-array name="notesDate">
        <item>12.04.2001</item>
        <item>14.09.2000</item>
        <item>02.06.2010</item>
        <item>13.09.2020</item>
        <item>01.11.2022</item>
        <item>12.04.2001</item>
        <item>14.09.2000</item>
        <item>02.06.2010</item>
        <item>13.09.2020</item>
        <item>01.11.2022</item>
    </string-array>

    <string-array name="notes">
        <item>leichtes Fieber,</item>
        <item>eitrige Wunde,</item>
        <item>Hämatom linkes Bein</item>
        <item>Schwindel</item>
        <item>Reizhusten</item>
        <item>leichtes Fieber,</item>
        <item>eitrige Wunde,</item>
        <item>Hämatom linkes Bein</item>
        <item>Schwindel</item>
        <item>Reizhusten</item>
    </string-array>

    <string-array name="painscala">
        <item>Schmerz (1–10): 4</item>
        <item>Schmerz (1–10): 7</item>
        <item>Schmerz (1–10): 7</item>
        <item>Schmerz (1–10): 2</item>
        <item>Schmerz (1–10): 5</item>
        <item>Schmerz (1–10): 4</item>
        <item>Schmerz (1–10): 7</item>
        <item>Schmerz (1–10): 7</item>
        <item>Schmerz (1–10): 2</item>
        <item>Schmerz (1–10): 5</item>
    </string-array>

    <string-array name="zustand">
        <item>OK</item>
        <item>Kritisch</item>
        <item>Kritisch</item>
        <item>Medium</item>
        <item>Medium</item>
        <item>OK</item>
        <item>Kritisch</item>
        <item>Kritisch</item>
        <item>Medium</item>
        <item>Medium</item>
    </string-array>

    <string-array name="LaborAnfrage">
        <item>k.A.</item>
        <item>MRT + Blutbild</item>
        <item>MRT</item>
        <item>k.A.</item>
        <item>k.A.</item>
        <item>k.A.</item>
        <item>MRT + Blutbild</item>
        <item>MRT</item>
        <item>k.A.</item>
        <item>k.A.</item>
    </string-array>

</resources>