<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        android:layout_marginTop="1dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp">

            <TextView
                android:id="@+id/ArztNotesCardDatum"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="5dp"
                android:text="@string/DE_TEXT_Datum"
                android:textStyle="bold"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/ArztNotesCardNote"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/ArztNotesCardDatum"
                android:layout_marginStart="20sp"
                android:text="@string/DE_TEXT_Notiz"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/ArztNotesCardZustand"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/ArztNotesCardNote"
                android:layout_marginTop="1dp"
                android:layout_marginStart="20sp"
                android:text="@string/DE_TEXT_Zustand"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/ArztNotesCardRequestedDocuments"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/ArztNotesCardNote"
                android:layout_toEndOf="@+id/ArztNotesCardZustand"
                android:text="@string/DE_TEXT_RequestedDocuments" />

            <ImageButton
                android:id="@+id/ArztNotesCardDetailsIcon"
                android:layout_width="59dp"
                android:layout_height="55dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/DE_BUTTON_Show_Details"
                android:padding="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>