<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LaborPatientCardName"
                android:layout_width="300dp"
                android:layout_height="18dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:text="@string/DE_TEXT_PersonalDataName"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/LaborPatientCardNotes"
                android:layout_width="300dp"
                android:layout_height="16dp"
                android:layout_below="@id/LaborPatientCardName"
                android:layout_marginStart="10dp"
                android:text="@string/DE_TEXT_Notiz"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LaborPatientCardName" />

            <TextView
                android:id="@+id/LaborPatientCardBettNummer"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/LaborPatientCardNotes"
                android:layout_marginStart="10dp"
                android:text="@string/DE_TEXT_PersonalDataBett"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LaborPatientCardNotes"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/LaborPatientCardDetailsIcon"
                android:layout_width="59dp"
                android:layout_height="55dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/DE_BUTTON_Show_Details"
                android:padding="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/LaborPatientCardRequestedDocuments"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/LaborPatientCardNotes"
                android:layout_toEndOf="@id/LaborPatientCardBettNummer"
                android:text="@string/DE_TEXT_RequestedDocuments"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/LaborPatientCardBettNummer" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>