<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/AdministrationPatientCardName"
                android:layout_width="300dp"
                android:layout_height="19dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:text="@string/DE_TEXT_PersonalDataName"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/AdministrationPatientCardBirthDate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/AdministrationPatientCardName"
                android:layout_marginStart="10dp"
                android:text="@string/DE_TEXT_PersonalDataAge"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AdministrationPatientCardName" />

            <TextView
                android:id="@+id/AdministrationPatientCardBedNr."
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/AdministrationPatientCardBirthDate"
                android:layout_marginStart="10dp"
                android:text="@string/DE_TEXT_PersonalDataBett"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AdministrationPatientCardBirthDate"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/AdministrationPatientCardImageButtonDetails"
                android:layout_width="59dp"
                android:layout_height="55dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/DE_BUTTON_Show_Details"
                android:padding="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/AdministrationPatientCardInsuranceNumber"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/AdministrationPatientCardBedNr."
                android:text="@string/DE_TEXT_PersonalDataKrankenkasse"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/AdministrationPatientCardBedNr."
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>