<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        android:layout_marginTop="1dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/ArztPatientCardName"
                android:layout_width="150dp"
                android:layout_height="19dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:text="@string/DE_TEXT_PersonalDataName"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ArztPatientCardBirthDate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/ArztPatientCardName"
                android:layout_marginStart="10dp"
                android:text="@string/DE_TEXT_PersonalDataAge"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ArztPatientCardName" />

            <TextView
                android:id="@+id/ArztPatientCardBettNummer"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/ArztPatientCardBirthDate"
                android:layout_marginStart="10dp"
                android:text="@string/DE_TEXT_PersonalDataBett"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ArztPatientCardBirthDate"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/ArztPatientCardDetailsIcon"
                android:layout_width="59dp"
                android:layout_height="55dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/DE_BUTTON_Show_Details"
                android:padding="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>