<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/detailsbackground"
    tools:context=".Activities.ArztPatientActivity">

    <TextView
        android:id="@+id/arztpatientdetailskartei1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:text="ARZT"
        android:textColor="@color/KarteiText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/arztpatientdetailskartei2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35sp"
        android:text="PATIENTEN AKTE"
        android:textColor="@color/KarteiText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ArztNotesPatientName"
        android:layout_marginTop="75dp"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="10dp"
        android:text="@string/DE_TEXT_PersonalData"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ArztNotesGeburtstag"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ArztNotesPatientName"
        android:layout_marginHorizontal="20dp"
        android:text="@string/DE_TEXT_PersonalDataAge"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ArztNotesBettNr"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ArztNotesPatientName"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="-16dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/ArztNotesGeburtstag"
        android:text="@string/DE_TEXT_PersonalDataBett"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Recycler"
        android:layout_width="369dp"
        android:layout_height="352dp"
        android:layout_above="@+id/ArztNotesSpinnerZustand"
        android:layout_below="@+id/ArztNotesGeburtstag"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="10dp"
        android:textSize="13sp" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ArztNotesSaveButton"
        android:layout_marginHorizontal="20sp"
        android:layout_marginBottom="29dp"
        android:autofillHints="Kein Eintrag"
        android:background="@color/white"
        android:hint="@string/DE_TEXT_Notiz"
        android:inputType="textLongMessage"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/ArztNotesCheckBoxMRT"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_above="@+id/ArztNotesCheckBoxBlutErgebnis"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:text="MRT"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/ArztNotesCheckBoxBlutErgebnis"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Notes"
        android:layout_marginHorizontal="20sp"
        android:layout_marginBottom="16dp"
        android:text="Blutergebnisse"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/ArztNotesSpinnerZustand"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ArztNotesSaveButton"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="151dp"
        android:layout_toEndOf="@id/ArztNotesCheckBoxMRT"
        android:contentDescription="@string/DE_TEXT_Zustand"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/ArztNotesSaveButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@id/ArztNotesButtonVerwerfen"
        android:layout_marginHorizontal="20sp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="@color/save_button"
        android:text="Speichern"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ArztNotesButtonVerwerfen"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20sp"
        android:layout_marginBottom="61dp"
        android:backgroundTint="@color/abort_delete_logout_button"
        android:text="Verwerfen"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />
</RelativeLayout>